kubernetes/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  labels:
    name: ingress
spec:
  ingressClassName: nginx
  rules:
  - host: a44f7f307ffbb4d79b4564e88c64d1dc-95691413.eu-central-1.elb.amazonaws.com
    http:
      paths:
      - pathType: Prefix
        path: "/api"
        backend:
          service:
            name: backend-svc
            port: 
              number: 3000
      - pathType: Prefix
        path: "/"
        backend: 
          service: 
            name: nginx-svc
            port:
              number: 80
